# bad-datalog

./: Cargo.toml  LICENSE  NOTES.org  README.md
src/: datalog.rs  engine.rs  lib.rs  main.rs  query.rs  storage.rs
