cargo-features = ["edition2021"]

[package]
name = "dlog"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
btreemultimap = "0.1.0"
byteorder = "1.4.3"
itertools = "0.10.1"
serde = { version = "1.0.126", features = ["rc", "derive"] }
sled = "0.34.6"
smallvec = "1.6.1"
tempfile = "3.2.0"
tuple = "0.5.1"
