[package]
name = "dlog"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
btreemultimap = "0.1.0"
byteorder = "1.4.3"
itertools = "0.10.3"
serde = { version = "1.0.133", features = ["rc", "derive"] }
sled = "0.34.7"
smallvec = "1.7.0"
tempfile = "3.2.0"
tuple = "0.5.1"
